new file:   Interpretable_ML/.gitignore 	new file:   Interpretable_ML/dataset/.gitignore 	new file:   Interpretable_ML/notebooks/transaction_clusterization_interp.ipynb 	new file:   Interpretable_ML/setup.py 	new file:   Interpretable_ML/src/__init__.py 	new file:   Interpretable_ML/src/data/DexTradePreprocessor.py 	new file:   Interpretable_ML/src/data/__init__.py 	new file:   Interpretable_ML/src/features/DexTradeFeatureEngineer.py 	new file:   Interpretable_ML/src/features/__init__.py 	new file:   Interpretable_ML/src/models/OfflineAnomalyPipeline.py 	new file:   Interpretable_ML/src/utils/__init__.py 	new file:   Interpretable_ML/src/utils/helpers.py 	new file:   Interpretable_ML/src/utils/plots.py 	new file:   Interpretable_ML/src/visualization/OfflineAnomalyVisualizer.py 	new file:   Interpretable_ML/src/visualization/__init__.py 	modified:   TimeSeriesAnalysis/notebooks/ts_models_comparison.ipynb 	modified:   TimeSeriesAnalysis/setup.py 	modified:   TimeSeriesAnalysis/src/utils/base_helpers.py

--- a/TimeSeriesAnalysis/notebooks/ts_models_comparison.ipynb
+++ b/TimeSeriesAnalysis/notebooks/ts_models_comparison.ipynb
@@ -2,37 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
     "\n",
-    "from src.utils.ts_plots import plot_models_forecast"
+    "from src.utils.ts_plots import plot_models_forecast\n",
+    "from src.utils.base_helpers import parse_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "forecast_horizon = 67\n",
     "\n",
-    "preprocessed = pd.read_csv('/home/arazin/main/university/AMLT/data/preprocessed/preprocessed.csv', index_col=0)\n",
+    "preprocessed = pd.read_csv('/home/arazin/main/university/AMLT/TimeSeriesAnalysis/data/preprocessed/preprocessed.csv', index_col=0)\n",
     "\n",
-    "train = pd.read_csv('/home/arazin/main/university/AMLT/data/interim/train_preprocessed.csv', index_col=0)\n",
-    "val = pd.read_csv('/home/arazin/main/university/AMLT/data/interim/val_preprocessed.csv', index_col=0)\n",
-    "test = pd.read_csv('/home/arazin/main/university/AMLT/data/interim/test_preprocessed.csv', index_col=0)\n",
+    "train = pd.read_csv('/home/arazin/main/university/AMLT/TimeSeriesAnalysis/data/interim/train_preprocessed.csv', index_col=0)\n",
+    "val = pd.read_csv('/home/arazin/main/university/AMLT/TimeSeriesAnalysis/data/interim/val_preprocessed.csv', index_col=0)\n",
+    "test = pd.read_csv('/home/arazin/main/university/AMLT/TimeSeriesAnalysis/data/interim/test_preprocessed.csv', index_col=0)\n",
     "\n",
-    "arima_forecast_test = pd.read_csv('../data/predicted/arima_prediction.csv', index_col=0)\n",
-    "lstm_forecast_test = pd.read_csv('../data/predicted/lstm_prediction.csv', index_col=0)"
+    "arima_forecast_test = pd.read_csv('/home/arazin/main/university/AMLT/TimeSeriesAnalysis/data/predicted/arima_prediction.csv', index_col=0)\n",
+    "lstm_forecast_test = pd.read_csv('/home/arazin/main/university/AMLT/TimeSeriesAnalysis/data/predicted/lstm_prediction.csv', index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -69,6 +70,89 @@
     "plot_path = os.path.join('../figures/time_series', plot_name)\n",
     "fig.savefig(plot_path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Arima test metrics\n",
+    "# Read the content of the MAPE file\n",
+    "with open('/home/arazin/main/university/AMLT/TimeSeriesAnalysis/data/metrics/arima_metrics/MAPE', 'r') as file:\n",
+    "    arima_mape_content = file.read()\n",
+    "arima_mape_content = parse_data(arima_mape_content)\n",
+    "\n",
+    "# Read the content of the R2 file\n",
+    "with open('/home/arazin/main/university/AMLT/TimeSeriesAnalysis/data/metrics/arima_metrics/R2', 'r') as file:\n",
+    "    arima_r2_content = file.read()\n",
+    "arima_r2_content = parse_data(arima_r2_content)\n",
+    "\n",
+    "## LSTM test metrics\n",
+    "# Read the content of the MAPE file\n",
+    "with open('/home/arazin/main/university/AMLT/TimeSeriesAnalysis/data/metrics/lstm_metrics/MAPE', 'r') as file:\n",
+    "    lstm_mape_content = file.read()\n",
+    "lstm_mape_content = parse_data(lstm_mape_content)\n",
+    "\n",
+    "# Read the content of the R2 file\n",
+    "with open('/home/arazin/main/university/AMLT/TimeSeriesAnalysis/data/metrics/lstm_metrics/R2', 'r') as file:\n",
+    "    lstm_r2_content = file.read()\n",
+    "lstm_r2_content = parse_data(lstm_r2_content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAPE Test Metrics on forecast horizon:\n",
+      "\n",
+      "MAPE Arima metric: 29.887930689010044\n",
+      "MAPE LSTM metric: 10.273359829204178\n",
+      " \n",
+      "R2 Test Metrics on forecast horizon:\n",
+      "\n",
+      "R2 Arima metric: -1.5932399294797452\n",
+      "R2 LSTM metric: 0.3639476844358228\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"MAPE Test Metrics on forecast horizon:\\n\")\n",
+    "print(\"MAPE Arima metric:\", arima_mape_content[0])\n",
+    "print(\"MAPE LSTM metric:\", lstm_mape_content[0])\n",
+    "print(' ')\n",
+    "print(\"R2 Test Metrics on forecast horizon:\\n\")\n",
+    "print(\"R2 Arima metric:\", arima_r2_content[0])\n",
+    "print(\"R2 LSTM metric:\", lstm_r2_content[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Result overview"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So, we can see, that the LSTM model outperforms Arima model - this is because the LSTM model use non-linear dependences firstly. \n",
+    "\n",
+    "Secondly, the data has seasonal dependences, so, if we make time series be stationary - the arima forecast will be better. Moreover, if we substitute Arima to SARIMAX and add some exog. variables it will be better.\n",
+    "\n",
+    "Finally, the arima is good baseline for time series model, and it can be better than LSTM network in some cases. However, in this case, LSTM outperformed the first one."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
